Add corrections to css

--- a/styles/components/content.scss
+++ b/styles/components/content.scss
@@ -7,7 +7,8 @@
     align-items: center;
   }
   &__quote {
-    padding: 0.5rem;
+    align-self: center;
+    padding: 2rem;
     background: #fffdf5;
     border-radius: 0.5rem;
     text-align: center;
